--- a/doc/thesis/background/rga.tex
+++ b/doc/thesis/background/rga.tex
@@ -1,7 +1,7 @@
 \section{Recentering Genetic Algorithm}
 \label{sec:rga}
 
-The recentering genetic algorithm (RGA) is a variation of the recentering-restarting genetic algorithm (RRGA)~\cite{hughes2013recentering}~\cite{hughes2013edit} which has had success in avoiding local minima. The RRGA is used to avoid fixating on local optima. RRGA works by performing a series of standard GA runs. Each run uses the final population from the previous run as its starting population with some adjustments. At the beginning of a run the RRGA selects a center, which is a possible candidate solution to the problem, and at the end of each basic GA run the center is compared to the best individual in the population. If the best individual is better than the current center it is replaced with the best individual and the whole process is repeated. The center is used as a baseline for generating the population in the next run.
+The recentering genetic algorithm (RGA) is a variation of the recentering-restarting genetic algorithm (RRGA)~\cite{hughes2013recentering}~\cite{hughes2013edit} which has had success in avoiding local optima. The RRGA is used to avoid fixating on local optima. RRGA works by performing a series of standard GA runs. Each run uses the final population from the previous run as its starting population with some adjustments. At the beginning of a run the RRGA selects a center, which is a possible candidate solution to the problem, and at the end of each basic GA run the center is compared to the best individual in the population. If the best individual is better than the current center it is replaced with the best individual and the whole process is repeated. The center is used as a baseline for generating the population in the next run.
 
 The RGA works similarly to the RRGA but there is no center for the population. Instead a basic GA is allowed to run until the population's fitness scores begins to converge. After the population has converged upon a minimum diversity, new individuals are introduced to the population. Duplicate individuals are removed from the population and new individuals that have not yet been in any population take their place. For example, if there is a population size of 100 and the convergence rate is 5\% then after all the duplicates are removed there will only be 5 individuals remaining and 95 new individuals will be inserted into the population. Algorithm~\ref{alg:restartingPopulation} shows the pseudo-code of the restarting method.
 
