--- a/doc/thesis/introduction/problem-definition.tex
+++ b/doc/thesis/introduction/problem-definition.tex
@@ -7,7 +7,7 @@ EXAFS can be used to identify properties of a molecule, but they do not provide 
 
 Using EXAFS spectrum comparison the goal is to obtain a set of candidate atomic structures. Atomic structures that generate similar EXAFS spectra may have different geometries. An expert will have to analyse the candidate solutions to determine if any of these atomic structures are actually chemically infeasible. \textbf{Having a set of candidate solutions will improve the odds of finding the actual solution.}
 
-The IFEFFIT XAFS data analysis suite~\cite{ifeffit} is used to simulate the EXAFS experiments. This suite includes two applications that will be used FEFF6, and IFEFFIT. FEFF6 is used to simulate an XAFS experiment and IFEFFIT does post processing of the simulated EXAFS spectra. During the atomic structure refinement, the generated atomic structures will be run through these applications to obtain an EXAFS spectra.
+The IFEFFIT XAFS data analysis suite~\cite{ifeffit} is used to simulate the EXAFS experiments. This suite includes two applications that will be used: FEFF6, and IFEFFIT. FEFF6 is used to simulate an XAFS experiment and IFEFFIT does post processing of the simulated EXAFS spectra. During the atomic structure refinement, the generated atomic structures will be run through these applications to obtain an EXAFS spectrum.
 
 NAMD~\cite{namd} will be used for the energy calculations. The NAMD Energy Plugin~\cite{namdEnergy}  will calculate the potential energy of the generated atomic structure.
 
