--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -4,28 +4,30 @@ Before we can begin explaining the techniques we used in the next chapter it is 
 
 \section{Quantum Mechanics/Molecular Mechanics}
 
-In previous work~\cite{sproviero2008model} the authors used DFT-QM/MM and R-QM/MM techniques to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work.
+In previous work~\cite{sproviero2008model} the authors used density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM) and refined quantum mechanics/molecular mechanics (R-QM/MM) to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work.
 
-Density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM)~\cite{parr1989density} uses the atoms spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
+DFT-QM/MM~\cite{parr1989density} uses the atoms' spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
 
-To increase their accuracy the researchers used a refined quantum mechanics/molecular mechanics (R-QM/MM) technique. This approach iteratively adjusted the molecular structure of the molecule and attempted to minimize a scoring function defined in terms of the sum of squared deviations between the experimental and calculated EXAFS spectra. A quadratic penalty was applied to each atom to ensure that their positions did not deviate too far from their original position in order to keep the energy of the system at a minimum.
+To increase their accuracy the researchers used R-QM/MM. This approach iteratively adjusted the molecular structure of the molecule and attempted to minimize a scoring function defined in terms of the sum of squared deviations between the experimental and calculated EXAFS spectra. A quadratic penalty was applied to each atom to ensure that the atoms' positions did not deviate too far from their original positions in order to keep the energy of the system at a minimum.
 
-The researchers speculated that even though the R-QM/MM technique was able to generate an EXAFS spectra closer to the experimental spectra their solution was only a local solution because it was based on their original DFT-QM/MM solution.
+The researchers speculated that even though the R-QM/MM technique was able to generate an EXAFS spectrum closer to the experimental spectrum their solution was only a local solution because it was based on their original DFT-QM/MM solution.
 
 Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a resolution of 1.9\AA. They has success rerunning the DFT-QM/MM experiment followed by the R-QM/MM experiment but still had the same speculations about remaining in a local solution.
 
-\section{Previous Applications of...}
+\section{Previous Applications}
+
+In this section, we look at previous applications of GA, DE, and PSO to biological problems, specifically concentrating on those that attempt to identify structures.
 
 \subsection{Genetic Algorithms}
 
-In ~\cite{comte2010bio} P. Comte uses a genetic algorithm to search for solutions to the side-chain packing problem. Each chromosome represents a list of amino-acid residues with a possible rotamer. Comte's method was a able to find improved low energy conformations over conventational methods.
+In ~\cite{comte2010bio} P. Comte used a genetic algorithm to search for solutions to the side-chain packing problem. Each chromosome represented a list of amino-acid residues with a possible rotamer. Comte's method was able to find improved low energy conformations over conventional methods.
 
-The Laboratory of Crystallography in Zurich, Switzerland developed a method~\cite{oganov2006crystal} for predicting stable crystal structures and low-energy structures using a genetic algorithm. Each chromosome represents a possible crystal structure, which is a set of atomic coordinates. The GA population was produced either randomly or by user input. Populations were also seeded by the best found crystal structures of previous GA experiments. The lab tested both tradition methods such as simulated annealing and basin hopping against their evolutionary algorithms but prefered the results of the evolutionary algorithm because of its ability to find solutions without knowledge of the problem itself and its ability to move out of local optima search.
+The Laboratory of Crystallography in Zurich, Switzerland developed a method~\cite{oganov2006crystal} for predicting stable crystal structures and low-energy structures using a genetic algorithm. Each chromosome represented a possible crystal structure, which is a set of atomic coordinates. The GA population was produced either randomly or by user input. Populations were also seeded by the best found crystal structures of previous GA experiments. The lab tested both traditional methods such as simulated annealing and basin hopping against their evolutionary algorithms, but preferred the results of the evolutionary algorithm because of its ability to find solutions without knowledge of the problem itself and its ability to move out of local optima.
 
 \subsection{Differential Evolution}
 
-In 2010 Kalegari, Diego Humberto and Lopes, Heitor Silverio used a differential evolution algorithm for protein structure optimization~\cite{kalegari2010differential}. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to contrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angle between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
+In 2010 Kalegari, and Lopes used a differential evolution algorithm for protein structure optimization~\cite{kalegari2010differential}. They used a simple representation for the protein structure known as hydrophobic/polar (HP). This allowed them to constrain the system to minimize the search space. The individuals in the DE consisted of a vector of values between $[-\pi, \pi]$ which represent the angles between three monomers. The study was able to find the ground state energy values for problems with smaller sets of amino acids but the researchers found that DE had a tougher time finding the optimal solution as the problem size grew larger.
 
 \subsection{Particle Swarm Optimization}
 
-A research group attempted crystal structure prediction using particle swarm optimization~\cite{wang2010crystal}. PSO was selected for comparison against traditional evolutionary methods. The goal was to find optimal structures with the lowest energy. The initial population was generated randomly based on a starting structure. Each of the new random structures was optimized locally before starting the PSO experiment. The local optimization was done using traditional conjugate gradient algorithms. The researchers found that PSO was an efficient method for finding low energy atomic configurations.
+Wang, Lv, Zhu, and Ma attempted crystal structure prediction using particle swarm optimization~\cite{wang2010crystal}. PSO was selected for comparison against traditional evolutionary methods. The goal was to find optimal structures with the lowest energy. The initial population was generated randomly based on a starting structure. Each of the new random structures was optimized locally before starting the PSO experiment. The local optimization was done using traditional conjugate gradient algorithms. The researchers found that PSO was an efficient method for finding low energy atomic configurations.
