--- a/doc/thesis/title.tex
+++ b/doc/thesis/title.tex
@@ -3,7 +3,7 @@
 
 {\LARGE {\bf Modeling Metal Protein Complexes from}}
 \\[0.2cm]{\LARGE {\bf Experimental Extended X-ray }}
-\\[0.2cm]{\LARGE {\bf Absorption Fine-Structure}}
+\\[0.2cm]{\LARGE {\bf Absorption Fine Structure}}
 \\[0.2cm]{\LARGE {\bf using Computational Intelligence}}
 \\[3cm]
 {\Large{ \bf Collin Price}}
