--- a/doc/thesis/background/ea.tex
+++ b/doc/thesis/background/ea.tex
@@ -3,7 +3,7 @@
 
 An evolutionary algorithm (EA) is a population-based metaheuristic optimization algorithm. An evolutionary algorithm is a search heuristic that is based on Darwin's theory of natural evolution. Darwin theorized that over a period of time a population of individuals would naturally mate and create offspring that were better than themselves. He suggested that not all individuals are created equally and that eventually the weaker individuals would die off. This same principle can be applied to a search algorithm as a heuristic. An EA contains a population of individuals that are evolved to find improved candidate solutions.
 
-Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic EA operates. Initially a \textit{population} of candidate solutions is generated. The individuals are evaluated based on an \textit{evaluation function} and are checked against the \textit{stopping criterion}. If the \textit{stopping criterion} has not been reached the population goes through an \textit{evolutionary period} where a new population of candidate individuals are created from the last population. This iterative process, also called a generation, is repeated until the \textit{stopping criterion} is reached. The following subsections will explain each of these parts.
+Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic EA operates. Initially a \textit{population} of candidate solutions is generated. The individuals are evaluated based on an \textit{evaluation function} and are checked against the \textit{stopping criterion}. If the \textit{stopping criterion} has not been reached the population goes through an \textit{evolutionary period} where a new population of candidate individuals are created from the last population. This iterative process, also called a \textit{generation}, is repeated until the \textit{stopping criterion} is reached. The following subsections will explain each of these parts.
 
 \begin{figure}[H]
 	\centering
@@ -14,7 +14,7 @@ Figure~\ref{fig:evolutionaryFlowchart} demonstrates how the basic EA operates. I
 
 \subsection{Population}
 
-The population is a key piece to an EA. Each individual in the population represents a possible candidate solution to the problem that we are attemping to solve. The representation of the individual is usually unique to the problem. Generating the initial population can either be done randomly or by some procedural method. The goal of generating the initial population is to create a diverse\textbf{(CITE)} enough population to find improved solutions.
+The population is a key piece to an EA. Each individual in the population represents a possible candidate solution to the problem that we are attemping to solve. The representation of the individual is usually unique to the problem. Generating the initial population can either be done randomly or by some procedural method. The goal of generating the initial population is to create a diverse enough population to find improved solutions.
 
 \subsection{Evaluation Function}
 \label{subsec:fitness-function}
@@ -27,4 +27,4 @@ Stopping criteria are used to determine when the EA should stop evolving. There 
 
 \subsection{Evolving the Population}
 
-The evolutionary process of an EA is what differs in each implementation of an EA. Each algorithm has a different interpretation of how the population should be evolved. Evolving the population consists of using the individuals in the population to create a new population. Later in this work the different interpretations will be explained.
+The evolutionary process of an EA is what differs in each implementation of an EA. Each algorithm has a different interpretation of how the population should be evolved. Evolving the population consists of using the individuals in the population to create a new population. Sections~\ref{sec:ga},~\ref{sec:rga},~\ref{sec:pso}, and~\ref{sec:de} provide detail on the different forms of evolution.
