--- a/doc/thesis/methodology/population-generation.tex
+++ b/doc/thesis/methodology/population-generation.tex
@@ -1,7 +1,7 @@
 \section{Population Generation}
 \label{sec:pop-generation}
 
-An initial population of different individuals needed to be created in order to begin refining the OEC atomic structure using an evolutionary algorithm. The initial OEC atomic structure came from the crystallographic photosystem II (PSII) structure~\cite{umena2011crystal}. It is available in the Protein Data Bank (PDB)~\cite{databank} as PDB ID 3ARC. Two forms of population generation were used during the experiments conducted in this work: random, and molecular dynamics simulation. The atomic structure obtained from the PDB contained 1269 chemical elements. For the purposes of OEC structure refinement only 79 specific atoms were required for EXAFS analysis.
+An initial population of different individuals needed to be created in order to begin refining the OEC atomic structure using an evolutionary algorithm. The initial OEC atomic structure came from the crystallographic photosystem II (PSII) structure~\cite{umena2011crystal}. It is available in the Protein Data Bank (PDB)~\cite{databank} as PDB ID 3ARC. Two forms of population generation were used during the experiments conducted in this work: random, and molecular dynamics simulation. The atomic structure obtained from the PDB contained 1269 chemical elements. For the purposes of OEC structure refinement only 79 specific atoms were required for EXAFS spectra analysis.
 
 % The atomic structures that were generated contained 1269 chemical elements. For the purposes of OEC structure refinement only 79 specific atoms were required for EXAFS analysis. The genetic algorithm only used the 79 atoms that required refinement.
 
@@ -44,6 +44,6 @@ A population can be generated randomly based on a starting molecule. To create a
 
 An alternative method of population generation was needed to generate individuals that were usable in the experiments. To ensure that the atomic structure was as stable as possible, the structure was put into a molecular dynamics simulation. While in this simulation the molecule is allowed to act as if it were in the real world. The atoms were allowed to move freely in space until the overall temperature of the system was reasonably low. This acted as the baseline atomic structure for all tests. NAMD~\cite{namd} was used to run the molecular dynamics simulations.
 
-Once the atom structure was stable the temperature within the system was increased. The increased temperature causes the atoms to oscillate their positions but still remain chemically feasible. During this process stapshots of the molecules atomic structure were recorded. The simulation was allowed to run for 10\ 000 steps and 10\ 000 snapshots of the atomic structure were recorded. Each of these snapshots creates a feasible individual for the experiments.
+Once the atom structure was stable the temperature within the system was increased. The increased temperature causes the atoms to oscillate their positions but still remain chemically feasible. During this process stapshots of the molecule's atomic structure were recorded. The simulation was allowed to run for 10\ 000 steps and 10\ 000 snapshots of the atomic structure were recorded. Each of these snapshots creates a feasible individual for the experiments.
 
 Since 10\ 000 individuals is more than enough individuals to seed the populations the best individuals were picked. The generated atomic structures were run through IFEFFIT~\cite{ifeffit} and compared to the target EXAFS spectra. The top 3\% (roughly 300) individuals were used to generate the initial populations in the evolutionary algorithms.
